#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
# specify package's name, version number, and bug-report address
AC_INIT([FileDel], [0.0.1], [kuinscplus@gmail.com])
# Initialize automake, turn on all automake warnings and report them as errors, a foreign package
AM_INIT_AUTOMAKE([foreign -Wall -Werror])

# Checks for programs.
# check for c++ compiler
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.
# declare config.h as output header
AC_CONFIG_HEADERS([config.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

# declare makefile as output files
AC_CONFIG_FILES([Makefile src/Makefile])
# actually output all declared files
AC_OUTPUT
