# cmake
cmake_minimum_required(VERSION 2.6)

# project
project(test_regex)
# Use this snippet *after* PROJECT(xxx):
IF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
    SET(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_SOURCE_DIR} CACHE PATH "install prefix" FORCE)
ENDIF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
message ("CMAKE_INSTALL_PREFIX = ${CMAKE_INSTALL_PREFIX}")

# compile
ADD_EXECUTABLE(test_regex src/test_regex.cpp)

# test
enable_testing()
add_test(test_success test_regex)
INCLUDE(CTest)

# install
INSTALL(TARGETS test_regex DESTINATION bin)
INSTALL(FILES etc/re.cfg DESTINATION etc)

# package
SET(CPACK_GENERATOR "TGZ;OSXX11")
SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Dobly") #required
SET(CPACK_PACKAGE_VENDOR "test")
SET(CPACK_PACKAGE_VERSION_MAJOR "0")
SET(CPACK_PACKAGE_VERSION_MINOR "1")
SET(CPACK_PACKAGE_VERSION_PATCH "0")
SET(CPACK_PACKAGE_VERSION ${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH})
SET(CPACK_PACKAGE_FILE_NAME test_regex-${CPACK_PACKAGE_VERSION})
SET(CPACK_PACKAGE_INSTALL_DIRECTORY "dist")
SET(CPACK_SOURCE_PACKAGE_FILE_NAME ${CPACK_PACKAGE_FILE_NAME}-src)
SET(CPACK_SOURCE_STRIP_FILES "")
SET(CPACK_STRIP_FILES "bin/test_regex")

INCLUDE(CPack)
